--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_fonts: ^2.1.0
   shared_preferences: ^2.0.7
   flutter_contacts: ^1.1.1+2
+  flutter_countdown_timer: ^4.1.0
 
 dev_dependencies:
   flutter_test:
