--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_contacts: ^1.1.1+2
   http: ^0.13.4
   flutter_countdown_timer: ^4.1.0
+  geolocator: ^7.7.1
 
 dev_dependencies:
   flutter_test:
