--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,11 @@ dependencies:
   google_fonts: ^2.1.0
   shared_preferences: ^2.0.7
   flutter_contacts: ^1.1.1+2
+  http: ^0.13.0
   flutter_countdown_timer: ^4.1.0
+  geolocator: ^7.7.1
+  blinking_text: ^1.0.1+2
+  sensors_plus: ^1.2.1
 
 dev_dependencies:
   flutter_test:
